--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "@vitejs/plugin-react": "^4.x.x"
     "vite": "^7.3.0"
   },
   "engines": {
