--- a/package.json
+++ b/package.json
@@ -26,17 +26,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "@vitejs/plugin-react": "^4.x.x"
-    "vite": "^7.3.0"
+    "terser": "^5.31.0",
+    "vite": "^5.4.11"
   },
   "engines": {
     "node": "18.x"
-  },
-  {
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
   }
-}
 }
